crates/hird-check/tests/snapshots/actors__missing_handler_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: "check_str(\"type St = St(Int)\\n\\\n         actor A {\\n\\\n           state: St,\\n\\\n           message: Msg = | Inc | Stop,\\n\\\n           init: fn(s: St) -> St ! {} = s,\\n\\\n           handle Inc, st -> St ! {} = st,\\n\\\n         }\")"
---
Inc : Msg
St : Int → St
Stop : Msg
error[C0041] 24..25: actor `A` does not handle message variant `Stop`
