crates/hird-check/tests/snapshots/actors__reply_in_handler_checks.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(MESSAGING)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
