crates/hird-check/tests/snapshots/actors__reply_to_carrying_sum_unused_is_legal.snap
---
source: crates/hird-check/tests/actors.rs
expression: "check_str(\"type Status = Status(Int)\\n\\\n         type Query = Ask(ReplyTo<Status>) | Cancel\")"
---
Ask : ReplyTo<Status> → Query
Cancel : Query
Status : Int → Status
