crates/hird-check/tests/snapshots/actors__reply_typed_against_channel.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
answer : ReplyTo<Status> → () ! {Send<Status>}
