crates/hird-check/tests/snapshots/actors__reply_value_type_mismatch_rejected.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
answer : ∀a. a
error[C0001] 392..398: type mismatch: expected `Status`, got `St`
