crates/hird-check/tests/snapshots/actors__request_await_effect_must_be_declared.snap
---
source: crates/hird-check/tests/actors.rs
expression: check_str(&source)
---
Get : ReplyTo<Status> → Msg
Inc : Msg
St : Int → St
Status : Int → Status
query : Pid<Msg> → Status ! {Send<Msg>}
error[C0030] 356..372: declared {Send<Msg>} but body performs {Await<Status>, Send<Msg>}
